# jacobi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml
benchmark_experiment/: RunningBenchmarkExperiment.md  censor_results.py  results2db.py  run_experiment.py  settings.json  settings.multi.json  settings.multi.range.json  settings.range.json  visualize_results_html_by_datafile.py  visualize_results_html_by_implementation.py
benchmarks/: CMakeLists.txt  absl_map_levels_storage_book_types.hpp  analyze_book.cpp  benchmark_helpers.hpp  intrusive_map_levels_storage_book_types.hpp  linear_v1_levels_storage_book_types.hpp  linear_v2_levels_storage_book_types.hpp  linear_v3_levels_storage_book_types.hpp  map_levels_storage_book_types.hpp  mixed_hot_cold_levels_storage_book_types.hpp  mixed_lru_levels_storage_book_types.hpp  mixed_lru_v2_levels_storage_book_types.hpp  profiling.cpp  profiling.hpp  reset_ids_util.cpp
benchmarks/latency/: absl_map_levels_storage_book.cpp  benchmark_generator.hpp  benchmark_latency_functions.hpp  intrusive_map_levels_storage_book.cpp  linear_v1_levels_storage_book.cpp  linear_v2_levels_storage_book.cpp  linear_v3_levels_storage_book.cpp  map_levels_storage_book.cpp  mixed_hot_cold_levels_storage_book.cpp  mixed_lru_v2_levels_storage_book.cpp  xxx_levels_storage_book_range_main.ipp
benchmarks/throughput/: absl_map_levels_storage_multi_book.cpp  absl_map_levels_storage_single_book.cpp  benchmark_generator.hpp  benchmark_throughput_functions.hpp  intrusive_map_levels_storage_multi_book.cpp  intrusive_map_levels_storage_single_book.cpp  linear_v1_levels_storage_multi_book.cpp  linear_v1_levels_storage_single_book.cpp  linear_v2_levels_storage_multi_book.cpp  linear_v2_levels_storage_single_book.cpp  linear_v3_levels_storage_multi_book.cpp  linear_v3_levels_storage_single_book.cpp  map_levels_storage_multi_book.cpp  map_levels_storage_single_book.cpp  mixed_hot_cold_levels_storage_multi_book.cpp  mixed_hot_cold_levels_storage_single_book.cpp  mixed_lru_levels_storage_multi_book.cpp  mixed_lru_levels_storage_single_book.cpp  mixed_lru_v2_levels_storage_multi_book.cpp  mixed_lru_v2_levels_storage_single_book.cpp  xxx_levels_storage_multiple_books_main.ipp  xxx_levels_storage_single_book_main.ipp
benchmarks/utils/: CMakeLists.txt  analyze_book.cpp  ntvitch2jacobi.cpp
book/: CMakeLists.txt
book/include/jacobi/book/: book.hpp  chunked_price_level.hpp  chunked_soa_price_level.hpp  order_refs_index.hpp  orders_table_crtp_base.hpp  price_level.hpp  price_level_fwd.hpp  soa_price_level.hpp  soa_price_level2.hpp  soa_price_level2_initial_links.ipp  soa_price_level_common.hpp  vocabulary_types.hpp
book/include/jacobi/book/linear/: orders_table.hpp
book/include/jacobi/book/map/: orders_table.hpp
book/include/jacobi/book/map/intrusive/: orders_table.hpp
book/include/jacobi/book/mixed/hot_cold/: book_init_params.hpp  orders_table.hpp
book/include/jacobi/book/mixed/lru/: orders_table.hpp
book/include/jacobi/book/utils/: chunk_list.hpp  intrusive_nodes_pool.hpp  lemire_hash.hpp
book/test/: CMakeLists.txt  book.cpp  book_more_tests.cpp  book_more_tests_mixed_hot_cold.ipp  common_big_book.ipp  order_refs_index.cpp  price_level.cpp  soa_price_level2.cpp  vocabulary_types.cpp
book/test/linear/: orders_table.cpp
book/test/map/: orders_table.cpp  orders_table_reusable_set_of_tests.ipp
book/test/mixed/hot_cold/: orders_table.cpp
book/test/mixed/lru/: orders_table.cpp
book/test/utils/: chunk_list.cpp  intrusive_nodes_pool.cpp
conan_profiles/: ubu-clang-20  ubu-clang-20-ubasan  ubu-clang-20-znver4  ubu-gcc-11-ubasan  ubu-gcc-11-x86-64-v3  ubu-gcc-14  ubu-gcc-14-ubasan  ubu-gcc-14-znver4
custom_deps/plf_list/: CMakeLists.txt
docs/: .gitignore  index.md
docs/feb2026/: Feb2026Experiment.md
docs/feb2026/raw_results/: benchmark_clang20.multi.range.tar.bz2  benchmark_clang20.single.range.tar.bz2  benchmark_gcc14.multi.range.tar.bz2  benchmark_gcc14.single.range.tar.bz2
docs/feb2026/results/: benchmark_clang20.multi_by_implementation.html  benchmark_gcc14.multi_by_implementation.html  feb2026_all_csv.tar.bz2
docs/feb2026/settings/: clang20.settings.multi.range.json  clang20.settings.single.range.json  gcc14.settings.multi.range.json  gcc14.settings.single.range.json
jacobi/: CMakeLists.txt
jacobi/cmake/: lib-config.cmake.in
jacobi/include/jacobi/: version.hpp
ntvitch/: CMakeLists.txt
ntvitch/include/jacobi/ntvitch/: ntvitch.hpp  ntvitch_fmt.hpp  packed_struct_begin.ipp  packed_struct_end.ipp
ntvitch/test/: CMakeLists.txt  ntvitch.cpp
snapshots/: CMakeLists.txt
snapshots/include/jacobi/snapshots/: events_snapshots.hpp  packed_struct_begin.ipp  packed_struct_end.ipp
snapshots/src/jacobi/snapshots/: events_snapshots.cpp
